# be-my-girl

./: .gitignore  CMakeLists.txt  README.md
funstaff/: CMakeLists.txt
funstaff/include/funstaff/: funstaff.hpp
funstaff/src/: funstaff.cpp  funstaff.qrc  funstaff.rc  funstaff.rc.in  funstaff.ui  main.cpp
